clusters/raspberrypi/apps/actual/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: actualbudget
  namespace: actual-budget
spec:
  ports:
    - port: 5006
      protocol: TCP
      targetPort: http
  selector:
    app: actualbudget
