clusters/raspberrypi/apps/actual/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: actual-ingress
  namespace: actual-budget
spec:
  defaultBackend:
    service:
      name: actualbudget
      port:
        number: 5006
  ingressClassName: tailscale
  tls:
  - hosts:
    - budgeting
